--- a/Syntaxes/XML.plist
+++ b/Syntaxes/XML.plist
@@ -14,16 +14,12 @@
 {
 	name = "XML";
 	
-	fileTypes = ( xml, plist );
-/*
-	foldingStartMarker = "^\\s*<[^!?/]+";
-	foldingStopMarker  = "(</[^?]+?>|/>)\\s*$";
-*/
-	foldingStartMarker = "^\\s*(<[^!?/]+(?!.+?/>)|(<!--(?!.*?-->))\\s*$)";
-	foldingStopMarker  = "(</[^?]+?>|/>|-->)\\s*$";
+	fileTypes = ( xml, plist, tld, jsp );
 
-	/* increaseIndentPattern = "<[^/>]*>\\s*$"; */
-	increaseIndentPattern = "<[^/]+?";
+	foldingStartMarker = "^\\s*(<[^!?%/]+(?!.+?/>)|(<[!%]--(?!.*?--%?>)|(<%[^@=](?!.*?%>)))\\s*$)";
+	foldingStopMarker  = "(</[^?]+?>|[/%]>|-->)\\s*$";
+
+	increaseIndentPattern = "^\\s*<[^/]+?(?!.+?/>)\\s*$";
 	
 	foregroundColor = "#333333";
 	backgroundColor = "#ffffff";
@@ -33,6 +29,7 @@
 		( "[", "]" ),
 		( "{", "}" ),
 		( "\"", "\"" ),
+		( "<", ">" ),
 	);
 	 highlightPairs = (
 	    ( "(", ")" ),
@@ -85,8 +82,8 @@
 		/* comments */
 		{
 			name = "comments";
-			begin = "<!--";
-			end = "-->";
+			begin = "<[!%]--";
+			end = "--%?>";
 			foregroundColor = "red";
 		},
 		
@@ -109,5 +106,39 @@
 		/* entities */
 		{ name = "HTML Entities"; match = "&([a-zA-Z_-]+|#[0-9]+|#x[0-9a-fA-F]+);"; foregroundColor = "#6600CC"; },
 		{ name = "Bad Ampersand"; match = "&"; backgroundColor = "#CC3300"; foregroundColor = "#ffffff"; },
+		
+		/* trailing whitespace */
+		{
+		    name = "Trailing whitespace";
+		    match = "\\s+$";
+		    backgroundColor = "#ffc9ae";
+		},
+
+		/* death to tabs! */
+		{
+		    name = "tabs";
+		    match = "\t";
+		    backgroundColor = "#e6f0ff";
+		},
+
+        /* jsp page properties */
+ 		{
+			name = "JSP page properties";
+			backgroundColor = "#A0C544";
+			begin = "<%@";
+			patterns = (
+				{ match = "page|include|taglib"; foregroundColor = "red"; },
+			);
+			end = "%>";
+		},
+		
+        /* embedded java */
+		{
+			name = "Embedded Java";
+			backgroundColor = "#E5E5E5";
+			begin = "<%(?!([=@]|--))";
+			patterns = ( { include = "Java Source"; } );
+			end = "(?!--)%>";
+		},
 	);
 }
