* added "tabs -> 4 spaces" command * added "trim trailing ws" command * updated XML syntax:   + cleaned up foldingStartMarker     Dunno how this puppy got so hosed without me noticing.  Should now     properly fold "<whatever", "<!--", "<%--", "<%", and "<%!" blocks   + removed <> from smart pairs; don't want that in Java code   + fixed embedded java definition to mark "<%", "<%=", and "<%!"     blocks * updated Unix bundle from TM 1.0.2b8
git-svn-id: http://svn.textmate.org/trunk/XML.tmbundle@45 dfb7d73b-c2ec-0310-8fea-fb051d288c6d

--- a/Syntaxes/XML.plist
+++ b/Syntaxes/XML.plist
@@ -16,7 +16,7 @@
 	
 	fileTypes = ( xml, plist, tld, jsp );
 
-	foldingStartMarker = "^\\s*(<[^!?%/]+(?!.+?/>)|(<[!%]--(?!.*?--%?>)|(<%[^@=](?!.*?%>)))\\s*$)";
+	foldingStartMarker = "^\\s*(<[^!?%/]+(?!.+?/>)|<[!%]--(?!.+?--%?>)|<%[!]?(?!.+?%>))\\s*$";
 	foldingStopMarker  = "(</[^?]+?>|[/%]>|-->)\\s*$";
 
 	increaseIndentPattern = "^\\s*<[^/]+?(?!.+?/>)\\s*$";
@@ -29,9 +29,9 @@
 		( "[", "]" ),
 		( "{", "}" ),
 		( "\"", "\"" ),
-		( "<", ">" ),
 	);
-	 highlightPairs = (
+
+	highlightPairs = (
 	    ( "(", ")" ),
 		( "[", "]" ),
 		( "{", "}" ),
@@ -136,7 +136,7 @@
 		{
 			name = "Embedded Java";
 			backgroundColor = "#E5E5E5";
-			begin = "<%(?!([=@]|--))";
+			begin = "<%[!=]?(?!--)";
 			patterns = ( { include = "Java Source"; } );
 			end = "(?!--)%>";
 		},
