--- a/Syntaxes/XML.plist
+++ b/Syntaxes/XML.plist
@@ -19,7 +19,7 @@
 	foldingStartMarker = "^\\s*(<[^!?%/]+(?!.+?/>)|<[!%]--(?!.+?--%?>)|<%[!]?(?!.+?%>))\\s*$";
 	foldingStopMarker  = "(</[^?]+?>|[/%]>|-->)\\s*$";
 
-	increaseIndentPattern = "^\\s*<[^/]+?(?!.+?/>)\\s*$";
+	increaseIndentPattern = "^\\s*<[^/](?!.+?/>)\\s*$";
 	
 	foregroundColor = "#333333";
 	backgroundColor = "#ffffff";
@@ -107,20 +107,6 @@
 		{ name = "HTML Entities"; match = "&([a-zA-Z_-]+|#[0-9]+|#x[0-9a-fA-F]+);"; foregroundColor = "#6600CC"; },
 		{ name = "Bad Ampersand"; match = "&"; backgroundColor = "#CC3300"; foregroundColor = "#ffffff"; },
 		
-		/* trailing whitespace */
-		{
-		    name = "Trailing whitespace";
-		    match = "\\s+$";
-		    backgroundColor = "#ffc9ae";
-		},
-
-		/* death to tabs! */
-		{
-		    name = "tabs";
-		    match = "\t";
-		    backgroundColor = "#e6f0ff";
-		},
-
         /* jsp page properties */
  		{
 			name = "JSP page properties";
