--- a/Syntaxes/XML.plist
+++ b/Syntaxes/XML.plist
@@ -16,11 +16,26 @@
 	
 	fileTypes = ( xml, plist, tld, jsp );
 
-	foldingStartMarker = "^\\s*(<[^!?%/]+(?!.+?/>)|<[!%]--(?!.+?--%?>)|<%[!]?(?!.+?%>))\\s*$";
-	foldingStopMarker  = "(</[^?]+?>|[/%]>|-->)\\s*$";
+	foldingStartMarker = "^\\s*(<[^!?%/](?!.+?(/>|</.+?>))|<[!%]--(?!.+?--%?>)|<%[!]?(?!.+?%>))";
+	foldingStopMarker  = "^\\s*(</[^>]+>|[/%]>|-->)\\s*$";
 
-	increaseIndentPattern = "^\\s*<[^/](?!.+?/>)\\s*$";
-	
+    /*
+     * Don't indent:
+     *  <?, </, <!
+     *  <whatever></whatever>
+     *  <whatever />
+     *  <% %>
+     *  <!-- -->
+     *  <%-- --%>
+     *
+     * Do indent:
+     *  <whatever>
+     *  <%
+     *  <!--
+     *  <%--
+     */
+    increaseIndentPattern = "^\\s*<([^!/?]|%)(?!.+?([/%]>|</.+?>))";
+    
 	foregroundColor = "#333333";
 	backgroundColor = "#ffffff";
 
@@ -90,11 +105,16 @@
 		/* nodes */
 		{
 			name = "nodes";
-			begin = "</?([-_a-zA-Z0-9:]+)";
+			begin = "</?([-_a-zA-Z0-9]+)(:[-_a-zA-Z0-9:]+)?";
 			end = "(/?)>";
+			
 	  		"elementFontStyle[1]" = ( underline ); 
-	
-			foregroundColor = "#0066CC";
+	  		"elementFontStyle[2]" = ( underline ); 
+
+	  		foregroundColor = "#0066CC";
+			"elementForegroundColor[1]" = "#0066CC";
+
+			"elementForegroundColor[2]" = "#670079";
 			
 			patterns = (
 	  			{ name = "Option"; match = " ([a-zA-Z\-]+)"; },
@@ -104,7 +124,7 @@
 		},
 
 		/* entities */
-		{ name = "HTML Entities"; match = "&([a-zA-Z_-]+|#[0-9]+|#x[0-9a-fA-F]+);"; foregroundColor = "#6600CC"; },
+		{ name = "HTML Entities"; match = "&([a-zA-Z0-9_-]+|#[0-9]+|#x[0-9a-fA-F]+);"; foregroundColor = "#6600CC"; },
 		{ name = "Bad Ampersand"; match = "&"; backgroundColor = "#CC3300"; foregroundColor = "#ffffff"; },
 		
         /* jsp page properties */
