Added xslt as XML file type
git-svn-id: http://svn.textmate.org/trunk/XML.tmbundle@59 dfb7d73b-c2ec-0310-8fea-fb051d288c6d

--- a/Syntaxes/XML.plist
+++ b/Syntaxes/XML.plist
@@ -15,7 +15,7 @@
 {
 	name = "XML";
 	
-	fileTypes = ( xml, plist, tld, jsp );
+	fileTypes = ( xml, plist, tld, jsp, xslt );
 
 	foldingStartMarker = "^\\s*(<[^!?%/](?!.+?(/>|</.+?>))|<[!%]--(?!.+?--%?>)|<%[!]?(?!.+?%>))";
 	foldingStopMarker  = "^\\s*(</[^>]+>|[/%]>|-->)\\s*$";
