--- a/Snippets/010 long tag.plist
+++ b/Snippets/010 long tag.plist
@@ -6,9 +6,11 @@
 	<string>&lt;$1&gt;$0&lt;/$1&gt;</string>
 	<key>name</key>
 	<string>long tag</string>
-	<key>trigger</key>
-	<string>&lt;</string>
 	<key>restrainToMode</key>
 	<true/>
+	<key>trigger</key>
+	<string>&lt;</string>
+	<key>uuid</key>
+	<string>BC8B9FBD-5F16-11D9-B9C3-000D93589AF6</string>
 </dict>
 </plist>
