--- a/Snippets/020 short tag.plist
+++ b/Snippets/020 short tag.plist
@@ -2,15 +2,15 @@
 <!DOCTYPE plist PUBLIC "-//Apple Computer//DTD PLIST 1.0//EN" "http://www.apple.com/DTDs/PropertyList-1.0.dtd">
 <plist version="1.0">
 <dict>
-	<key>bundlePath</key>
-	<string>/Users/blalor/Library/Application Support/TextMate/Bundles/Custom.tmbundle</string>
 	<key>content</key>
 	<string>&lt;$0 /&gt;</string>
 	<key>name</key>
 	<string>short tag</string>
-	<key>trigger</key>
-	<string>&gt;</string>
 	<key>restrainToMode</key>
 	<true/>
+	<key>trigger</key>
+	<string>&gt;</string>
+	<key>uuid</key>
+	<string>BC8BA078-5F16-11D9-B9C3-000D93589AF6</string>
 </dict>
 </plist>
