--- a/Syntaxes/XML.plist
+++ b/Syntaxes/XML.plist
@@ -58,22 +58,22 @@
 	patterns = (
 		/* processing instructions */
 		{
-			name = "processing instructions";
+			name = "meta.docinfo.processing.xml";
 			begin = "<\\?\\s*[-_a-zA-Z0-9]+";
 			end = "\\?>";
 
 			foregroundColor = "#888888";
 
 			patterns = (
-	  			{ name = "Option"; match = " ([a-zA-Z\-]+)"; },
-	  			{ name = "Double Quoted String"; begin = "\""; end = "\"";  foregroundColor = "#CC3300";},
-				{ name = "Single Quoted String"; begin = "'"; end = "'"; fontStyle = (  ); foregroundColor = "#CC3300";	},
+	  			{ name = "keywords.markup.tag.options.xml"; match = " ([a-zA-Z\-]+)"; },
+	  			{ name = "strings.double-quoted.html"; begin = "\""; end = "\"";  foregroundColor = "#CC3300";},
+				{ name = "strings.single-quoted.html"; begin = "'"; end = "'"; fontStyle = (  ); foregroundColor = "#CC3300";	},
 			);
 		},
 		
 		/* doctype */
 		{
-			name = "doctype stuff";
+			name = "meta.docinfo.doctype.html";
 			begin = "<!(DOCTYPE)";
 			end = ">";
 
@@ -88,8 +88,8 @@
 					"elementForegroundColor[2]" = "#6600CC";
 				
 					patterns = (
-	  					{ name = "Double Quoted String"; begin = "\""; end = "\"";  foregroundColor = "#CC3300";},
-						{ name = "Single Quoted String"; begin = "'"; end = "'"; fontStyle = (  ); foregroundColor = "#CC3300";	},
+	  					{ name = "strings.double-quoted.html"; begin = "\""; end = "\"";  foregroundColor = "#CC3300";},
+						{ name = "strings.single-quoted.html"; begin = "'"; end = "'"; fontStyle = (  ); foregroundColor = "#CC3300";	},
 					);
 				},
 			);
@@ -97,7 +97,7 @@
 		
 		/* comments */
 		{
-			name = "comments";
+			name = "comments.block.xml";
 			begin = "<[!%]--";
 			end = "--%?>";
 			foregroundColor = "red";
@@ -105,7 +105,7 @@
 		
 		/* nodes */
 		{
-			name = "nodes";
+			name = "keywords.markup.tags.xml";					// "tags" in HTML; want them to be colored similarly.
 			begin = "</?([-_a-zA-Z0-9]+)(:[-_a-zA-Z0-9:]+)?";
 			end = "(/?)>";
 			
@@ -118,19 +118,19 @@
 			"elementForegroundColor[2]" = "#670079";
 			
 			patterns = (
-	  			{ name = "Option"; match = " ([a-zA-Z\-]+)"; },
-	  			{ name = "Double Quoted String"; begin = "\""; end = "\"";  foregroundColor = "#CC3300";},
-				{ name = "Single Quoted String"; begin = "'"; end = "'"; fontStyle = (  ); foregroundColor = "#CC3300";	},
+	  			{ name = "keywords.markup.tag.options.xml"; match = " ([a-zA-Z\-]+)"; },
+	  			{ name = "strings.double-quoted.html"; begin = "\""; end = "\"";  foregroundColor = "#CC3300";},
+				{ name = "strings.single-quoted.html"; begin = "'"; end = "'"; fontStyle = (  ); foregroundColor = "#CC3300";	},
 			);
 		},
 
 		/* entities */
-		{ name = "HTML Entities"; match = "&([a-zA-Z0-9_-]+|#[0-9]+|#x[0-9a-fA-F]+);"; foregroundColor = "#6600CC"; },
-		{ name = "Bad Ampersand"; match = "&"; backgroundColor = "#CC3300"; foregroundColor = "#ffffff"; },
+		{ name = "constants.character-entities.html"; match = "&([a-zA-Z0-9_-]+|#[0-9]+|#x[0-9a-fA-F]+);"; foregroundColor = "#6600CC"; },
+		{ name = "invalid.bad-ampersand.html"; match = "&"; backgroundColor = "#CC3300"; foregroundColor = "#ffffff"; },
 		
         /* jsp page properties */
  		{
-			name = "JSP page properties";
+			name = "embedded.jsp-props";  // JSP page properties
 			backgroundColor = "#A0C544";
 			begin = "<%@";
 			patterns = (
@@ -141,7 +141,7 @@
 		
         /* embedded java */
 		{
-			name = "Embedded Java";
+			name = "embedded.java";
 			backgroundColor = "#E5E5E5";
 			begin = "<%[!=]?(?!--)";
 			patterns = ( { include = "Java Source"; } );
