Very basic XML validation using xmllint (from libxml2) -- it saves current buffer to temporary file since xmllint wants a filename (and doesn't work with <(cat)).
It currently doesn't make the reported errors into clickable links.

git-svn-id: http://svn.textmate.org/trunk/XML.tmbundle@496 dfb7d73b-c2ec-0310-8fea-fb051d288c6d

--- a/info.plist
+++ b/info.plist
@@ -4,6 +4,13 @@
 <dict>
 	<key>name</key>
 	<string>XML</string>
+	<key>ordering</key>
+	<array>
+		<string>F216B838-965F-11D9-9561-000D93589AF6</string>
+		<string>BC8B9FBD-5F16-11D9-B9C3-000D93589AF6</string>
+		<string>BC8BA078-5F16-11D9-B9C3-000D93589AF6</string>
+		<string>D3C4E6DA-6B1C-11D9-8CC2-000D93589AF6</string>
+	</array>
 	<key>uuid</key>
 	<string>4694D53F-6227-11D9-BFB1-000D93589AF6</string>
 </dict>
