• just added a firstLineMatch to the XML Syntax so if you open a XML plist it gets highlighted as XML and not old-style plist.
(thanks Allan for this great feature! :) )

git-svn-id: http://svn.textmate.org/trunk/Bundles/XML.tmbundle@632 dfb7d73b-c2ec-0310-8fea-fb051d288c6d

--- a/Syntaxes/XML.plist
+++ b/Syntaxes/XML.plist
@@ -16,6 +16,7 @@
 	name = "XML";
 	scopeName = "text.xml";
 	
+	firstLineMatch = "^\\s*<\\?xml";
 	fileTypes = ( xml, tld, jsp, xslt );
 
 	foldingStartMarker = "^\\s*(<[^!?%/](?!.+?(/>|</.+?>))|<[!%]--(?!.+?--%?>)|<%[!]?(?!.+?%>))";
