--- a/Syntaxes/XML.plist
+++ b/Syntaxes/XML.plist
@@ -67,9 +67,9 @@
 			foregroundColor = "#888888";
 
 			patterns = (
-	  			{ name = "keywords.markup.tag.options.xml"; match = " ([a-zA-Z\-]+)"; },
-	  			{ name = "strings.double-quoted.html"; begin = "\""; end = "\"";  foregroundColor = "#CC3300";},
-				{ name = "strings.single-quoted.html"; begin = "'"; end = "'"; fontStyle = (  ); foregroundColor = "#CC3300";	},
+	  			{ name = "keyword.markup.tag.options.xml"; match = " ([a-zA-Z\-]+)"; },
+	  			{ name = "string.double-quoted.html"; begin = "\""; end = "\"";  foregroundColor = "#CC3300";},
+				{ name = "string.single-quoted.html"; begin = "'"; end = "'"; fontStyle = (  ); foregroundColor = "#CC3300";	},
 			);
 		},
 		
@@ -90,8 +90,8 @@
 					"elementForegroundColor[2]" = "#6600CC";
 				
 					patterns = (
-	  					{ name = "strings.double-quoted.html"; begin = "\""; end = "\"";  foregroundColor = "#CC3300";},
-						{ name = "strings.single-quoted.html"; begin = "'"; end = "'"; fontStyle = (  ); foregroundColor = "#CC3300";	},
+	  					{ name = "string.double-quoted.html"; begin = "\""; end = "\"";  foregroundColor = "#CC3300";},
+						{ name = "string.single-quoted.html"; begin = "'"; end = "'"; fontStyle = (  ); foregroundColor = "#CC3300";	},
 					);
 				},
 			);
@@ -99,7 +99,7 @@
 		
 		/* comments */
 		{
-			name = "comments.block.xml";
+			name = "comment.block.xml";
 			begin = "<[!%]--";
 			end = "--%?>";
 			foregroundColor = "red";
@@ -107,7 +107,7 @@
 		
 		/* nodes */
 		{
-			name = "keywords.markup.tags.xml";					// "tags" in HTML; want them to be colored similarly.
+			name = "keyword.markup.tags.xml";					// "tags" in HTML; want them to be colored similarly.
 			begin = "</?([-_a-zA-Z0-9]+)(:[-_a-zA-Z0-9:]+)?";
 			end = "(/?)>";
 			
@@ -120,14 +120,14 @@
 			"elementForegroundColor[2]" = "#670079";
 			
 			patterns = (
-	  			{ name = "keywords.markup.tag.options.xml"; match = " ([a-zA-Z\-]+)"; },
-	  			{ name = "strings.double-quoted.html"; begin = "\""; end = "\"";  foregroundColor = "#CC3300";},
-				{ name = "strings.single-quoted.html"; begin = "'"; end = "'"; fontStyle = (  ); foregroundColor = "#CC3300";	},
+	  			{ name = "keyword.markup.tag.options.xml"; match = " ([a-zA-Z\-]+)"; },
+	  			{ name = "string.double-quoted.html"; begin = "\""; end = "\"";  foregroundColor = "#CC3300";},
+				{ name = "string.single-quoted.html"; begin = "'"; end = "'"; fontStyle = (  ); foregroundColor = "#CC3300";	},
 			);
 		},
 
 		/* entities */
-		{ name = "constants.character-entities.html"; match = "&([a-zA-Z0-9_-]+|#[0-9]+|#x[0-9a-fA-F]+);"; foregroundColor = "#6600CC"; },
+		{ name = "constant.character-entities.html"; match = "&([a-zA-Z0-9_-]+|#[0-9]+|#x[0-9a-fA-F]+);"; foregroundColor = "#6600CC"; },
 		{ name = "invalid.bad-ampersand.html"; match = "&"; backgroundColor = "#CC3300"; foregroundColor = "#ffffff"; },
 		
         /* jsp page properties */
