• changed include to use “source.java” instead of “Java Source”. • changed name of include rule to “source.java.embedded”. • added Zope development extensions to file types.
git-svn-id: http://svn.textmate.org/trunk/Bundles/XML.tmbundle@717 dfb7d73b-c2ec-0310-8fea-fb051d288c6d

--- a/Syntaxes/XML.plist
+++ b/Syntaxes/XML.plist
@@ -17,7 +17,9 @@
 	scopeName = "text.xml";
 	
 	firstLineMatch = "^\\s*<\\?xml";
-	fileTypes = ( xml, tld, jsp, xslt );
+
+	// pt, cpt, and dtml comes from Zope development
+	fileTypes = ( xml, tld, jsp, xsl, xslt, pt, cpt, dtml );
 
 	foldingStartMarker = "^\\s*(<[^!?%/](?!.+?(/>|</.+?>))|<[!%]--(?!.+?--%?>)|<%[!]?(?!.+?%>))";
 	foldingStopMarker  = "^\\s*(</[^>]+>|[/%]>|-->)\\s*$";
@@ -143,10 +145,10 @@
 		
         /* embedded java */
 		{
-			name = "embedded.java";
+			name = "source.java.embedded";
 			backgroundColor = "#E5E5E5";
 			begin = "<%[!=]?(?!--)";
-			patterns = ( { include = "Java Source"; } );
+			patterns = ( { include = "source.java"; } );
 			end = "(?!--)%>";
 		},
 	);
