Added scope to these two commands.
git-svn-id: http://svn.textmate.org/trunk/Bundles/XML.tmbundle@747 dfb7d73b-c2ec-0310-8fea-fb051d288c6d

--- a/Commands/XMLlint.plist
+++ b/Commands/XMLlint.plist
@@ -17,6 +17,8 @@ rm "$tmp"</string>
 	<string>Validate XML</string>
 	<key>output</key>
 	<string>showAsHTML</string>
+	<key>scope</key>
+	<string>text.xml</string>
 	<key>uuid</key>
 	<string>F216B838-965F-11D9-9561-000D93589AF6</string>
 </dict>
