A lot of renaming, re-ordering, inserting “whatever” as placeholder text etc.
git-svn-id: http://svn.textmate.org/trunk/Bundles/XML.tmbundle@808 dfb7d73b-c2ec-0310-8fea-fb051d288c6d

--- a/Snippets/010 long tag.plist
+++ b/Snippets/010 long tag.plist
@@ -6,9 +6,9 @@
 	<string>&lt;$1&gt;$0&lt;/$1&gt;</string>
 	<key>name</key>
 	<string>long tag</string>
-	<key>restrainToMode</key>
-	<true/>
-	<key>trigger</key>
+	<key>scope</key>
+	<string>text.xml</string>
+	<key>tabTrigger</key>
 	<string>&lt;</string>
 	<key>uuid</key>
 	<string>BC8B9FBD-5F16-11D9-B9C3-000D93589AF6</string>
