--- a/Snippets/020 short tag.plist
+++ b/Snippets/020 short tag.plist
@@ -6,9 +6,9 @@
 	<string>&lt;$0 /&gt;</string>
 	<key>name</key>
 	<string>short tag</string>
-	<key>restrainToMode</key>
-	<true/>
-	<key>trigger</key>
+	<key>scope</key>
+	<string>text.xml</string>
+	<key>tabTrigger</key>
 	<string>&gt;</string>
 	<key>uuid</key>
 	<string>BC8BA078-5F16-11D9-B9C3-000D93589AF6</string>
