Changed a last keyword.markup.* to entity.*
git-svn-id: http://svn.textmate.org/trunk/Bundles/XML.tmbundle@846 dfb7d73b-c2ec-0310-8fea-fb051d288c6d

--- a/Syntaxes/XML.plist
+++ b/Syntaxes/XML.plist
@@ -81,7 +81,7 @@
 			    2 = { name = "entity.name.tag.xml"; };
 			};
 			patterns = (
-	  			{ name = "keyword.markup.tag.options.xml"; match = " ([a-zA-Z\-]+)"; },
+	  			{ name = "entity.parameter.attribute.tag.xml"; match = " ([a-zA-Z\-]+)"; },
 	  			{ name = "string.double-quoted.xml"; begin = "\""; end = "\"";},
 				{ name = "string.single-quoted.xml"; begin = "'"; end = "'";},
 			);
