My previous commit was not exactly right: $0 is added implicitly at the end of every snippet, unless it is defined inside the snippet.
There is a valid reason to have the long tag have $0 in between the tags: if you don't, it is not possible to use tabs or other snippets inside it, which you typically want to do.

Besides fixing that, I also added default values and another long tag snippet with attributes (tab-trigger "<a")



git-svn-id: http://svn.textmate.org/trunk/Bundles/XML.tmbundle@851 dfb7d73b-c2ec-0310-8fea-fb051d288c6d

--- a/info.plist
+++ b/info.plist
@@ -8,6 +8,7 @@
 	<array>
 		<string>F216B838-965F-11D9-9561-000D93589AF6</string>
 		<string>BC8B9FBD-5F16-11D9-B9C3-000D93589AF6</string>
+		<string>F443A9C7-88A5-40EE-820E-A311B16D85C4</string>
 		<string>BC8BA078-5F16-11D9-B9C3-000D93589AF6</string>
 		<string>D3C4E6DA-6B1C-11D9-8CC2-000D93589AF6</string>
 	</array>
