--- a/Snippets/long attribute tag.plist
+++ b/Snippets/long attribute tag.plist
@@ -3,14 +3,14 @@
 <plist version="1.0">
 <dict>
 	<key>content</key>
-	<string>&lt;${1:name}&gt;$0&lt;/${1:name}&gt;</string>
+	<string>&lt;${1:name} ${2attr="value"}&gt;$0&lt;/${1:name}&gt;</string>
 	<key>name</key>
-	<string>long tag</string>
+	<string>long attribute tag</string>
 	<key>scope</key>
 	<string>text.xml</string>
 	<key>tabTrigger</key>
-	<string>&lt;</string>
+	<string>&lt;a</string>
 	<key>uuid</key>
-	<string>BC8B9FBD-5F16-11D9-B9C3-000D93589AF6</string>
+	<string>F443A9C7-88A5-40EE-820E-A311B16D85C4</string>
 </dict>
 </plist>
