C and C++ now has ctrl-shift-option-C as key equivalent. Obj-C and Obj-C++ has ctrl-shift-option-O. XML has ctrl-shift-option-X.
git-svn-id: http://svn.textmate.org/trunk/Bundles/XML.tmbundle@958 dfb7d73b-c2ec-0310-8fea-fb051d288c6d

--- a/Syntaxes/XML.plist
+++ b/Syntaxes/XML.plist
@@ -15,6 +15,7 @@
 {
 	name = "XML";
 	scopeName = "text.xml";
+	keyEquivalent = "~^X";
 	uuid = "D3C4E6DA-6B1C-11D9-8CC2-000D93589AF6";
 	
 	firstLineMatch = "^\\s*<\\?xml";
