• errors are now clickable.
git-svn-id: http://svn.textmate.org/trunk/Bundles/XML.tmbundle@1105 dfb7d73b-c2ec-0310-8fea-fb051d288c6d

--- a/Commands/XMLlint.plist
+++ b/Commands/XMLlint.plist
@@ -5,10 +5,7 @@
 	<key>beforeRunningCommand</key>
 	<string>nop</string>
 	<key>command</key>
-	<string>tmp=`mktemp -t xml_validate`
-cat &gt;"$tmp"
-xmllint --htmlout "$tmp"
-rm "$tmp"</string>
+	<string>xmllint --htmlout - 2&gt;&amp;1|perl -pe 's|^((?:&lt;/?[^&gt;]+&gt;)*)(.*?):(\d+):(.*error.*)|$1&lt;a href="txmt://open?line=$3"&gt;$4&lt;/a&gt;|'</string>
 	<key>input</key>
 	<string>document</string>
 	<key>keyEquivalent</key>
