- Changed Python Syntax to allow for multiline function and class definitions - Added XML snippet for long tags with attributes (<a)
git-svn-id: http://svn.textmate.org/trunk/Bundles/XML.tmbundle@1207 dfb7d73b-c2ec-0310-8fea-fb051d288c6d

--- a/Snippets/long attribute tag.plist
+++ b/Snippets/long attribute tag.plist
@@ -3,7 +3,8 @@
 <plist version="1.0">
 <dict>
 	<key>content</key>
-	<string>&lt;${1:name} ${2:attr="value"}&gt;$0&lt;/${1:name}&gt;</string>
+	<string>&lt;${1:name} ${2:attr="value"}&gt;$0
+&lt;/${1:name}&gt;</string>
 	<key>name</key>
 	<string>long attribute tag</string>
 	<key>scope</key>
