Added scope for CDATA.
git-svn-id: http://svn.textmate.org/trunk/Bundles/XML.tmbundle@1472 dfb7d73b-c2ec-0310-8fea-fb051d288c6d

--- a/Syntaxes/XML.plist
+++ b/Syntaxes/XML.plist
@@ -232,6 +232,14 @@
 				</dict>
 			</array>
 		</dict>
+		<dict>
+			<key>begin</key>
+			<string>&lt;!\[CDATA\[</string>
+			<key>end</key>
+			<string>]]&gt;</string>
+			<key>name</key>
+			<string>string.unquoted.xml.cdata</string>
+		</dict>
 	</array>
 	<key>scopeName</key>
 	<string>text.xml</string>
