--- a/info.plist
+++ b/info.plist
@@ -7,10 +7,12 @@
 	<key>ordering</key>
 	<array>
 		<string>F216B838-965F-11D9-9561-000D93589AF6</string>
+		<string>A1DAE610-1E05-4174-BB6D-A51E22DB0764</string>
 		<string>BC8B9FBD-5F16-11D9-B9C3-000D93589AF6</string>
 		<string>F443A9C7-88A5-40EE-820E-A311B16D85C4</string>
 		<string>BC8BA078-5F16-11D9-B9C3-000D93589AF6</string>
 		<string>D3C4E6DA-6B1C-11D9-8CC2-000D93589AF6</string>
+		<string>95788610-7E2E-45CE-9CCE-708FE0C90BF7</string>
 	</array>
 	<key>uuid</key>
 	<string>4694D53F-6227-11D9-BFB1-000D93589AF6</string>
