- New preference to disable spell checking inside DOCTYPE declarations - Changed tag matching: 	- Begin/end tag matching is now separate (no attributes for end tags!) 	- A tag name of the form "ns:name" is completely scoped as "entity.name.tag.xml", the namespace part is scoped as "entity.other.namespace.xml" and the last is "entity.other.tag.localname.xml" 	- Similar change for attributes
TODO:
The current syntax still allows for tags of the form:
	<tag "value" attribute=/>
I can't think of a simple way to solve this for both double and single quoted strings.

git-svn-id: http://svn.textmate.org/trunk/Bundles/XML.tmbundle@1506 dfb7d73b-c2ec-0310-8fea-fb051d288c6d

--- a/Syntaxes/XML.plist
+++ b/Syntaxes/XML.plist
@@ -133,24 +133,29 @@
 		</dict>
 		<dict>
 			<key>begin</key>
-			<string>&lt;/?(?:([-_a-zA-Z0-9]+):)?([-_a-zA-Z0-9:]+)</string>
+			<string>&lt;((?:([-_a-zA-Z0-9]+):)?([-_a-zA-Z0-9:]+))</string>
 			<key>captures</key>
 			<dict>
 				<key>1</key>
 				<dict>
 					<key>name</key>
-					<string>entity.other.namespace.xml</string>
+					<string>entity.name.tag.xml</string>
 				</dict>
 				<key>2</key>
 				<dict>
 					<key>name</key>
-					<string>entity.name.tag.xml</string>
+					<string>entity.other.namespace.xml</string>
+				</dict>
+				<key>3</key>
+				<dict>
+					<key>name</key>
+					<string>entity.other.tag.localname.xml</string>
 				</dict>
 			</dict>
 			<key>end</key>
 			<string>/?&gt;</string>
 			<key>name</key>
-			<string>declaration.tag.xml</string>
+			<string>declaration.tag.start.xml</string>
 			<key>patterns</key>
 			<array>
 				<dict>
@@ -164,11 +169,13 @@
 						<key>2</key>
 						<dict>
 							<key>name</key>
-							<string>entity.other.attribute-name.xml</string>
+							<string>entity.other.attribute.localname.xml</string>
 						</dict>
 					</dict>
 					<key>match</key>
-					<string> (?:([-_a-zA-Z0-9]+):)?([a-zA-Z-]+)</string>
+					<string>\s+(?:([-_a-zA-Z0-9]+):)?([a-zA-Z-]+)=</string>
+					<key>name</key>
+					<string>entity.other.attribute.name.xml</string>
 				</dict>
 				<dict>
 					<key>begin</key>
@@ -187,6 +194,30 @@
 					<string>string.quoted.single.xml</string>
 				</dict>
 			</array>
+		</dict>
+		<dict>
+			<key>captures</key>
+			<dict>
+				<key>1</key>
+				<dict>
+					<key>name</key>
+					<string>entity.name.tag.xml</string>
+				</dict>
+				<key>2</key>
+				<dict>
+					<key>name</key>
+					<string>entity.other.namespace.xml</string>
+				</dict>
+				<key>3</key>
+				<dict>
+					<key>name</key>
+					<string>entity.other.tag.localname.xml</string>
+				</dict>
+			</dict>
+			<key>match</key>
+			<string>&lt;/((?:([-_a-zA-Z0-9]+):)?([-_a-zA-Z0-9:]+))\s*&gt;</string>
+			<key>name</key>
+			<string>declaration.tag.end.xml</string>
 		</dict>
 		<dict>
 			<key>match</key>
