--- a/info.plist
+++ b/info.plist
@@ -13,6 +13,7 @@
 		<string>BC8BA078-5F16-11D9-B9C3-000D93589AF6</string>
 		<string>D3C4E6DA-6B1C-11D9-8CC2-000D93589AF6</string>
 		<string>95788610-7E2E-45CE-9CCE-708FE0C90BF7</string>
+		<string>34AB30B1-045B-476E-AEAF-5DCA7D6FF186</string>
 	</array>
 	<key>uuid</key>
 	<string>4694D53F-6227-11D9-BFB1-000D93589AF6</string>
